// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileData TileData renders with tooltip 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="box xsDisplayBlock"
  >
    <div
      aria-label="this is a tooltip"
      className="box"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        aria-pressed={true}
        className="tile selected focused"
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="button"
        style={
          Object {
            "backgroundColor": "#0081fe1A",
            "borderColor": "#0081fe",
          }
        }
        tabIndex={0}
      >
        <div
          className="Flex rowGap2 columnGap2 xsDirectionRow"
        >
          <div
            className="FlexItem"
          >
            <div
              className="Flex rowGap0 columnGap1 xsDirectionColumn"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
                  style={
                    Object {
                      "minHeight": 24,
                    }
                  }
                >
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal"
                    >
                      Text Impressions
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="FlexItem"
              >
                <div
                  className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
                >
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="Text fontSize400 defaultText alignStart breakWord fontWeightSemiBold"
                    >
                      1.23M
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TileData renders 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    aria-pressed={true}
    className="tile selected focused"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    style={
      Object {
        "backgroundColor": "#0081fe1A",
        "borderColor": "#0081fe",
      }
    }
    tabIndex={0}
  >
    <div
      className="Flex rowGap2 columnGap2 xsDirectionRow"
    >
      <div
        className="FlexItem"
      >
        <div
          className="Flex rowGap0 columnGap1 xsDirectionColumn"
        >
          <div
            className="FlexItem"
          >
            <div
              className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
              style={
                Object {
                  "minHeight": 24,
                }
              }
            >
              <div
                className="FlexItem"
              >
                <div
                  className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal"
                >
                  Text Impressions
                </div>
              </div>
            </div>
          </div>
          <div
            className="FlexItem"
          >
            <div
              className="Flex rowGap2 columnGap2 xsDirectionRow xsItemsCenter"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="Text fontSize400 defaultText alignStart breakWord fontWeightSemiBold"
                >
                  1.23M
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
